-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10
-
None
-
453df72f2 (dev), 31f9a360e (6.10)
When the user changes the series axis graph view is not updated.
For Gerrit Dashboard: QTBUG-138598 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
662637,4 | Update GraphView when series axis is changed | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
663925,2 | Update GraphView when series axis is changed | 6.10 | qt/qtgraphs | Status: MERGED | +2 | 0 |