Update GraphView when series axis is changed

Fixes: QTBUG-138598
Change-Id: I456dfa64244acfedbd11a68e5de9fbe31c2174e2
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 453df72f289d830477d20b58db44a50ccd97c763)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>